@@ -1018,10 +1018,11 @@ parameter, if any. No C<Content-Length> header will be set, and C<render_chunk>
 may be called additional times with more response data.
 
 C<render_chunk> does not impose a chunked response, it simply does not generate
-a C<Content-Length> header. For content where the encoded content length is
-known in advance but the content can't be passed to a single L</"render"> call,
-a C<Content-Length> header can be set manually with L</"add_response_header">,
-and then C<render_chunk> may be used to render each part.
+a C<Content-Length> header. For content where the total encoded content length
+is known in advance but the content can't be passed to a single L</"render">
+call, a C<Content-Length> header can be set manually with
+L</"add_response_header">, and then C<render_chunk> may be used to render each
+part.
 
 The C<Content-Type> response header will be set according to
 L</"set_response_type">, or autodetected depending on the data type passed in
